Added clear-votes api
